align other css issues after fixing headshot issue

--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,11 @@ body {
   padding: 0;
 }
 
+#nav > nav > div {
+  padding: 0;
+  padding-right: 15px;
+}
+
 .navbar-nav>li>a {
   padding-top: 0;
   padding-bottom: 0;
@@ -206,7 +211,7 @@ a#studentName {
   border-radius: 50%;
   -webkit-transform: scaleX(-1);
   transform: scaleX(-1);
-  cursor:pointer;
+  cursor: default;
   margin: 0;
 }
 
